--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.5",
+    "qs": "^6.11.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
